[gd_scene load_steps=12 format=3 uid="uid://bb4nnlh70plvw"]

[ext_resource type="Script" path="res://main.gd" id="1_7vku1"]
[ext_resource type="MeshLibrary" uid="uid://du4gvmkkq5o3h" path="res://tile_map.tres" id="1_kwjf5"]
[ext_resource type="PackedScene" uid="uid://bjrrixu8hfsmf" path="res://player.tscn" id="2_jmdnv"]
[ext_resource type="PackedScene" uid="uid://de8yxye8mso66" path="res://Maps/Level1/level_1.tscn" id="3_ie5b0"]
[ext_resource type="PackedScene" uid="uid://d24872ur26jko" path="res://Terminal/terminal_window.tscn" id="4_bi2n5"]
[ext_resource type="Script" path="res://addons/interpolated_camera_3d/interpolated_camera_3d.gd" id="6_n1s2c"]
[ext_resource type="PackedScene" uid="uid://bk31pnffmm0mp" path="res://Objects/root_computer_node.tscn" id="7_mv12h"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ptv1a"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_n82qc"]
sky_material = SubResource("ProceduralSkyMaterial_ptv1a")

[sub_resource type="Environment" id="Environment_k2kby"]
background_mode = 1
background_color = Color(0.0941176, 0.0784314, 0.145098, 1)
sky = SubResource("Sky_n82qc")
tonemap_mode = 2
glow_enabled = true
glow_bloom = 0.5
glow_blend_mode = 0

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_bwui0"]

[node name="Main" type="Node"]
script = ExtResource("1_7vku1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_k2kby")

[node name="GridMap" type="GridMap" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, -1, 0)
mesh_library = ExtResource("1_kwjf5")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(0, 65535, 0, 0, 0, 0, 65535, 0, 0, 65535, 65535, 0, 65534, 65535, 0, 65534, 0, 0, 65534, 1, 0, 65535, 1, 0, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 65535, 0, 1, 65534, 0, 0, 65534, 0, 65535, 65534, 0, 65534, 65534, 0, 65533, 65534, 0, 65533, 65535, 0, 65533, 0, 0, 65534, 2, 0, 65535, 2, 0, 65533, 2, 0, 65533, 1, 0, 0, 2, 0, 1, 2, 0, 2, 65534, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 2, 0, 2, 3, 0, 1, 3, 0, 0, 3, 0, 65535, 3, 0, 65534, 3, 0, 65533, 3, 0, 65532, 3, 0, 65532, 2, 0, 65532, 1, 0, 65532, 0, 0, 65532, 65535, 0, 65532, 65534, 0, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 3, 65534, 0, 3, 65535, 0, 3, 0, 0, 3, 1, 0, 3, 2, 0, 3, 3, 0, 3, 4, 0, 2, 4, 0, 1, 4, 0, 0, 4, 0, 65535, 4, 0, 65534, 4, 0, 65533, 4, 0, 65532, 4, 0, 65531, 4, 0, 65531, 3, 0, 65531, 2, 0, 65531, 1, 0, 65531, 0, 0, 65531, 65535, 0, 65531, 65534, 0, 65531, 65533, 0, 65531, 65532, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 0, 0, 65532, 0, 1, 65532, 0, 2, 65532, 0, 3, 65532, 0, 4, 65532, 0, 4, 65533, 0, 4, 65534, 0, 4, 65535, 0, 4, 0, 0, 4, 1, 0, 4, 2, 0, 4, 3, 0, 4, 4, 0, 4, 5, 0, 3, 5, 0, 2, 5, 0, 1, 5, 0, 0, 5, 0, 65535, 5, 0, 65534, 5, 0, 65533, 5, 0, 65532, 5, 0, 65531, 5, 0, 65530, 5, 0, 65530, 4, 0, 65530, 3, 0, 65530, 2, 0, 65530, 1, 0, 65530, 0, 0, 65530, 65535, 0, 65530, 65534, 0, 65530, 65533, 0, 65530, 65532, 0, 65530, 65531, 0, 65530, 65530, 0, 65531, 65530, 0, 65531, 65531, 0, 65532, 65530, 0, 65532, 65531, 0, 65533, 65530, 0, 65533, 65531, 0, 65534, 65531, 0, 65534, 65530, 0, 65535, 65531, 0, 65535, 65530, 0, 0, 65531, 0, 0, 65530, 0, 1, 65530, 0, 1, 65531, 0, 2, 65531, 0, 2, 65530, 0, 3, 65530, 0, 3, 65531, 0, 4, 65531, 0, 4, 65530, 0, 5, 65530, 0, 5, 65531, 0, 5, 65532, 0, 5, 65533, 0, 5, 65534, 0, 5, 65535, 0, 5, 0, 0, 5, 1, 0, 5, 2, 0, 5, 3, 0, 5, 4, 0, 5, 5, 0)
}

[node name="Player" parent="." instance=ExtResource("2_jmdnv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8)

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 4.45512, 4)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("WorldBoundaryShape3D_bwui0")

[node name="Level" parent="." instance=ExtResource("3_ie5b0")]

[node name="OverlayLayer" type="CanvasLayer" parent="."]

[node name="TerminalWindow" parent="OverlayLayer" instance=ExtResource("4_bi2n5")]
unique_name_in_owner = true
visible = false
offset_left = 1244.0
offset_top = 34.0
offset_right = -36.0
offset_bottom = -566.0

[node name="InterpolatedCamera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 4.45512, 12)
current = true
script = ExtResource("6_n1s2c")
target = NodePath("../Player/Camera3D")

[node name="RootComputerNode" parent="." instance=ExtResource("7_mv12h")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.0374815, 0, -5.09918)

[connection signal="hack_activated" from="Player" to="." method="_on_player_hack_activated"]
[connection signal="player_moved" from="Player" to="." method="_on_player_player_moved"]
[connection signal="security_reduced" from="OverlayLayer/TerminalWindow" to="." method="_on_terminal_window_security_reduced"]
[connection signal="terminal_completed" from="OverlayLayer/TerminalWindow" to="." method="_on_terminal_window_terminal_completed"]
